<resources>
    <!-- Name: Dhruv Bandaria
         Student id: 301102928
         Section Nubmer: 002
     -->
    <string name="app_name">DhruvLab3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drwaing">Drawing</string>
    <string name="animation">Animation</string>
    <string name="earth_animation">Earth Animation</string>
    <string name="name_studentid">Dhruv Bandaria 301102928</string>
    <string name="brush_width">Brush Size:</string>
    <string name="brush_color">Brush Color:</string>
    <string name="fname">Dhruv</string>
    <string name="lname">Bandaria</string>
    <string name="start_animation">Start Animation</string>
    <string name="stop_animation">Stop Animation</string>
    <string name="open_cam">Make Call</string>
    <string name="pop_up_message">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string-array name="brush_size">
        <item>5mm Brush</item>
        <item>10mm Brush</item>
        <item>15mm Brush</item>
    </string-array>
    <string-array name="brush_color">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Yellow</item>
    </string-array>
</resources>