<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BandariaFragment">

    <Button
        android:id="@+id/open_call"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_cam" />
    <Button
        android:id="@+id/startFrameAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/open_call"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/start_animation"
        />
    <Button
        android:id="@+id/stopFrameAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/open_call"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="200dp"
        android:text="@string/stop_animation"
        />
    <ImageView
        android:id="@+id/framedAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startFrameAnimation"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="50dp"
        />

</RelativeLayout>